#fire: new updated to docker-compose.yml2.0