@@ -1,6 +1,5 @@
 package kz.enki.fire.evaluation_service.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -13,38 +12,21 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Value("${cors.allowed-origins:http://localhost:8081,http://127.0.0.1:8081,http://2.133.130.153:8081}")
-    private List<String> allowedOrigins;
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // Разрешенные origins
-        configuration.setAllowedOrigins(allowedOrigins);
-        
-        // Разрешенные методы
+        // Разрешить все origins (pattern * совместим с allowCredentials)
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
         ));
-        
-        // Разрешенные headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        
-        // Разрешить credentials
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        
-        // Preflight cache
         configuration.setMaxAge(3600L);
-        
-        // Expose headers
-        configuration.setExposedHeaders(Arrays.asList(
-            "Content-Type", "Authorization", "X-Requested-With"
-        ));
-        
+        configuration.setExposedHeaders(List.of("*"));
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-        
         return source;
     }
 }
